# ListaOS

./: .gitignore  CMakeLists.txt  README.md  build-bootable-img.sh  build-toolchain.sh  init.lds  makefile  makeimg.sh
inc/: font.h  io.h  keyboard.h  memory.h  mm.h  pci.h  stdio.h  string.h
inc/kernel/: color.h  console.h  display.h  interrupt.h  intr_handler.h  io.h  keyboard.h  mm.h  pci.h  timer.h  types.h
inc/kernel/driver/: sata.h
inc/kernel/internal/: mm_internal.h
src/: CMakeLists.txt  color.c  color.h  display.h  div64.c  font.c  font.h  interrupt.c  intr_handler.h  io.c  kernel.lds  main.c  memory.c  stdio.c
src/bootloader/: CMakeLists.txt  boot.lds  boot.s  init.s  init_display.s  init_protect_mode.s  start.s
src/libkernel/: CMakeLists.txt  color.c  console.c  console.h  display.c  display.h  div64.h  font.c  interrupt.c  interrupt.h  intr_handler.s  io.c  io.h  keyboard.c  memory.c  mm.c  pci.c  stdarg.h  stdbool.h  stdio.c  stdio.h  string.c  timer.c  timer.h
src/libkernel/driver/: sata.c
